--- a/coursegen-ai/package.json
+++ b/coursegen-ai/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.2",
+    "prisma": "^5.5.2",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.0.0",
