--- a/coursegen-ai/.env
+++ b/coursegen-ai/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://johndoe:randompassword@localhost:3306/mydb"
+DATABASE_URL='mysql://pucjixbwa424rwi5i59h:pscale_pw_5DU9hXHwxKHlRrrZKTbMBD9cEZBFpEqW6F0epNxGeXJ@aws.connect.psdb.cloud/coursegenx-ai?sslaccept=strict'
