--- a/coursegen-ai/package.json
+++ b/coursegen-ai/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.5.2",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.2",
+    "next-auth": "^4.24.4",
     "prisma": "^5.5.2",
     "react": "^18",
     "react-dom": "^18",
