Added a google provider need to add the actaul provider to it

--- a/coursegen-ai/.env
+++ b/coursegen-ai/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL='mysql://pucjixbwa424rwi5i59h:pscale_pw_5DU9hXHwxKHlRrrZKTbMBD9cEZBFpEqW6F0epNxGeXJ@aws.connect.psdb.cloud/coursegenx-ai?sslaccept=strict'
+NEXTAUTH_SECRET = "$UPER3AN"
