--- a/coursegen-ai/.env
+++ b/coursegen-ai/.env
@@ -5,6 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL='mysql://pucjixbwa424rwi5i59h:pscale_pw_5DU9hXHwxKHlRrrZKTbMBD9cEZBFpEqW6F0epNxGeXJ@aws.connect.psdb.cloud/coursegenx-ai?sslaccept=strict'
-NEXTAUTH_SECRET = "$UPER3AN"
+NEXTAUTH_SECRET ='$UPER3AN'
 GOOGLE_CLIENT_ID ='165077858787-sh86ff4nlrv8i0j526k7qu2tmcg9qsfn.apps.googleusercontent.com'
-GOOGLE_CLIENT_SECRET = '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'
+GOOGLE_CLIENT_SECRET ='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'
