--- a/coursegen-ai/package.json
+++ b/coursegen-ai/package.json
@@ -19,6 +19,7 @@
     "lucide-react": "^0.292.0",
     "next": "14.0.2",
     "next-auth": "^4.24.4",
+    "next-themes": "^0.2.1",
     "prisma": "^5.5.2",
     "react": "^18",
     "react-dom": "^18",
