--- a/coursegen-ai/package.json
+++ b/coursegen-ai/package.json
@@ -23,6 +23,7 @@
     "next": "14.0.2",
     "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
+    "openai": "^4.17.4",
     "prisma": "^5.5.2",
     "react": "^18",
     "react-dom": "^18",
