--- a/coursegen-ai/package.json
+++ b/coursegen-ai/package.json
@@ -33,6 +33,7 @@
     "react-hot-toast": "^2.4.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "youtube-transcript": "^1.0.6",
     "zod": "^3.22.4"
   },
   "devDependencies": {
